.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SalesIQ__Request__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Approval_Count__c</fullName>
        <description>Number of Approvals required.</description>
        <inlineHelpText>Number of Approvals required.</inlineHelpText>
        <label>Approval Count</label>
        <summaryForeignKey>SalesIQ__ApprovalLineItem__c.SalesIQ__Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Partially_Excecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partially Excecuted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lot Size Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Deletion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnAssign AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign UnAssign AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnAssign and Assign AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create &amp; Assign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Movement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Name Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Status_Flag_Sum__c</fullName>
        <description>Sum of Status Flag</description>
        <label>Status Flag Sum</label>
        <summarizedField>SalesIQ__ApprovalLineItem__c.SalesIQ__Status_Flag__c</summarizedField>
        <summaryForeignKey>SalesIQ__ApprovalLineItem__c.SalesIQ__Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <columns>SalesIQ__Status__c</columns>
        <columns>SalesIQ__Request_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>